--- a/Project1024.Wasm/_Imports.razor
+++ b/Project1024.Wasm/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using Project1024.Wasm
 @using Project1024.Wasm.Shared
+@using BlazorComponent
+@using Masa.Blazor
+@using Masa.Blazor.Presets
