--- a/Project1024.Wasm/App.razor
+++ b/Project1024.Wasm/App.razor
@@ -4,9 +4,9 @@
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
     <NotFound>
-        <PageTitle>Not found</PageTitle>
+        <PageTitle>未找到</PageTitle>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p role="alert">Sorry, there's nothing at this address.</p>
+            <p role="alert">抱歉，这里什么也没有。</p>
         </LayoutView>
     </NotFound>
 </Router>
