测试视频布局

--- a/Project1024.Wasm/Pages/Recommend.razor
+++ b/Project1024.Wasm/Pages/Recommend.razor
@@ -1,4 +1,17 @@
 @page "/"
 @page "/Recommend"
 
-<h1>ÍÆ¼ö</h1>
+<div class="d-flex" style="position:absolute; height: 100%; width: 100%">
+    <video class="flex-grow-1"
+           src="https://video.pearvideo.com/mp4/third/20211108/cont-1745429-11905134-102742-hd.mp4"
+           preload="auto"
+           autoplay
+           loop
+           controls
+           controlslist="nodownload noremoteplayback">
+    </video>
+    <div class="d-flex flex-column justify-center">
+        <MButton>Up</MButton>
+        <MButton>Down</MButton>
+    </div>
+</div>
