--- a/Project1024.Wasm/_Imports.razor
+++ b/Project1024.Wasm/_Imports.razor
@@ -7,6 +7,8 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using Project1024.Wasm
+@using Project1024.Wasm.Components
+@using Project1024.Wasm.Components.Swiper
 @using Project1024.Wasm.Shared
 @using BlazorComponent
 @using Masa.Blazor
