--- a/Project1024.Wasm/Pages/Recommend.razor
+++ b/Project1024.Wasm/Pages/Recommend.razor
@@ -1,17 +1,26 @@
 @page "/"
 @page "/Recommend"
+@inject IJSRuntime JS
 
 <div class="d-flex" style="position:absolute; height: 100%; width: 100%">
-    <video class="flex-grow-1"
-           src="https://video.pearvideo.com/mp4/third/20211108/cont-1745429-11905134-102742-hd.mp4"
-           preload="auto"
-           autoplay
-           loop
-           controls
-           controlslist="nodownload noremoteplayback">
-    </video>
-    <div class="d-flex flex-column justify-center">
-        <MButton>Up</MButton>
-        <MButton>Down</MButton>
-    </div>
-</div>
+    <SwiperContainer @ref="_swiper" Class="flex-grow-1">
+        @for (int i = 0; i < 9; i++)
+        {
+            <SwiperSlide @key="i" Class="pa-2" Style="box-sizing: border-box">
+                <VideoPlayer Style="width: 100%; height: 100%" />
+            </SwiperSlide>
+        }
+    </SwiperContainer>
+    <div class="d-flex flex-column justify-center pa-2">
+        <MButton Fab Class="mb-1" OnClick="() => _swiper.SlidePrevAsync()">
+             <MIcon>mdi-chevron-up</MIcon>
+         </MButton>
+         <MButton Fab Class="mt-1" OnClick="() => _swiper.SlideNextAsync()">
+             <MIcon>mdi-chevron-down</MIcon>
+         </MButton>
+     </div>
+ </div>
+
+ @code {
+    private SwiperContainer _swiper = null!;
+ }
