--- a/Project1024.Wasm/Components/Swiper/SwiperSlide.razor
+++ b/Project1024.Wasm/Components/Swiper/SwiperSlide.razor
@@ -1,4 +1,4 @@
-﻿<swiper-slide class="@Class" style="@Style">
+﻿<swiper-slide @attributes="Attributes">
     @ChildContent
 </swiper-slide>
 
@@ -6,9 +6,6 @@
     [Parameter]
     public RenderFragment? ChildContent { get; set; }
 
-    [Parameter]
-    public string Class { get; set; } = "";
-
-    [Parameter]
-    public string Style { get; set; } = "";
+    [Parameter(CaptureUnmatchedValues = true)]
+    public Dictionary<string, object>? Attributes { get; set; }
 }
