--- a/Project1024.Wasm/Components/VideoPlayer.razor
+++ b/Project1024.Wasm/Components/VideoPlayer.razor
@@ -1,50 +1,124 @@
 ﻿@inject IJSRuntime JS
+@implements IAsyncDisposable
 
 <div class="@Class" style="position: relative; border-radius: 12px; @Style">
-    <video oncontextmenu="return false;"
-           style="width: 100%; height: 100%; min-width: 0"
-           src="@_videoUrl"
-           preload="auto"
-           playsinline
-           autoplay
-           loop
-           controls
-           controlslist="nodownload noremoteplayback">
-    </video>
-    <div style="position: absolute; left: 32px; bottom: 96px">
-        <div class="text--primary text-h5">@@尤克里里唱作教学</div>
-        <div class="text--secondary text-subtitle-1">爷青结！《忘记时间》尤克里里弹唱</div>
-    </div>
-    <div class="d-flex flex-column align-center" style="position: absolute; right: 32px; bottom: 96px">
-        <MButton Icon Fab OnClick="OnLikeClicked">
-             <MIcon>mdi-heart</MIcon>
-         </MButton>
-         803
-         <MButton Icon Fab OnClick="OnCommentClicked">
-             <MIcon>mdi-comment-multiple</MIcon>
-         </MButton>
-         77
-         <MButton Icon Fab OnClick="OnCollectClicked">
-             <MIcon>mdi-star</MIcon>
-         </MButton>
-         380
-         <MButton Icon Fab OnClick="OnShareClicked">
-             <MIcon>mdi-share</MIcon>
-         </MButton>
-         123
-     </div>
- </div>
+    @if (Show)
+    {
+        <video @ref="_video"
+               oncontextmenu="return false;"
+               style="width: 100%; height: 100%; min-width: 0"
+               src="@_videoUrl"
+               preload="auto"
+               playsinline
+               autoplay="@AutoPlay"
+               muted="@AutoPlay"
+               loop
+               controls
+               controlslist="nodownload noremoteplayback">
+        </video>
+        <div style="position: absolute; left: 32px; bottom: 96px">
+            <div class="text--primary text-h5">@@尤克里里唱作教学 @Test</div>
+            <div class="text--secondary text-subtitle-1">爷青结！《忘记时间》尤克里里弹唱</div>
+        </div>
+        <div class="d-flex flex-column align-center" style="position: absolute; right: 32px; bottom: 96px">
+            <MButton Icon Fab OnClick="OnLikeClicked">
+                 <MIcon>mdi-heart</MIcon>
+             </MButton>
+             803
+             <MButton Icon Fab OnClick="OnCommentClicked">
+                 <MIcon>mdi-comment-multiple</MIcon>
+             </MButton>
+             77
+             <MButton Icon Fab OnClick="OnCollectClicked">
+                 <MIcon>mdi-star</MIcon>
+             </MButton>
+             380
+             <MButton Icon Fab OnClick="OnShareClicked">
+                 <MIcon>mdi-share</MIcon>
+             </MButton>
+             123
+         </div>
+    }
+</div>
 
- @code {
+@code {
+    private ElementReference _video;
+    private IJSObjectReference? _jsVideo;
+
+    [Parameter]
+    public int Test { get; set; }
+
     [Parameter]
     public string Class { get; set; } = "";
 
     [Parameter]
     public string Style { get; set; } = "";
 
+    [Parameter]
+    public bool Show { get; set; } = true;
+
+    [Parameter]
+    public bool AutoPlay { get; set; }
+
     private string _videoUrl { get; set; } = "https://video.pearvideo.com/mp4/third/20211108/cont-1745429-11905134-102742-hd.mp4";
 
     private bool IsPlaying { get; set; }
+
+    public async Task ShowAsync()
+    {
+        if (Show == true)
+        {
+            return;
+        }
+        Show = true;
+        await InvokeAsync(StateHasChanged);
+    }
+
+    public async Task HideAsync()
+    {
+        if (Show == false)
+        {
+            return;
+        }
+        Show = false;
+        await InvokeAsync(StateHasChanged);
+    }
+
+    public async Task PlayAsync()
+    {
+        if (_jsVideo is not null)
+        {
+            await _jsVideo.InvokeVoidAsync("play");
+        }
+    }
+
+    public async Task PauseAsync()
+    {
+        if (_jsVideo is not null)
+        {
+            await _jsVideo.InvokeVoidAsync("pause");
+        }
+    }
+
+    public async ValueTask DisposeAsync()
+    {
+        await DisposeAsyncCore().ConfigureAwait(false);
+        GC.SuppressFinalize(this);
+    }
+
+    protected virtual async ValueTask DisposeAsyncCore()
+    {
+        if (_jsVideo is not null)
+        {
+            await _jsVideo.DisposeAsync().ConfigureAwait(false);
+        }
+        _jsVideo = null;
+    }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        _jsVideo = Show ? await JS.InvokeAsync<IJSObjectReference>("eval", _video) : null;
+    }
 
     private void OnLikeClicked()
     {
