--- a/Project1024.Wasm/Components/VideoPlayer.razor
+++ b/Project1024.Wasm/Components/VideoPlayer.razor
@@ -1,4 +1,5 @@
-﻿@inject IJSRuntime JS
+﻿@using Project1024.Shared.Models;
+@inject IJSRuntime JS
 @implements IAsyncDisposable
 
 <div class="@Class" style="position: relative; border-radius: 12px; @Style">
@@ -7,18 +8,17 @@
         <video @ref="_video"
                oncontextmenu="return false;"
                style="width: 100%; height: 100%; min-width: 0"
-               src="@_videoUrl"
+               src="@Video?.VideoUrl"
                preload="auto"
                playsinline
                autoplay="@AutoPlay"
-               muted="@AutoPlay"
                loop
                controls
                controlslist="nodownload noremoteplayback">
         </video>
         <div style="position: absolute; left: 32px; bottom: 96px">
-            <div class="text--primary text-h5">@@尤克里里唱作教学 @Test</div>
-            <div class="text--secondary text-subtitle-1">爷青结！《忘记时间》尤克里里弹唱</div>
+            <div class="text--primary text-h5">@@@Video?.Title</div>
+            <div class="text--secondary text-subtitle-1">@Video?.Title</div>
         </div>
         <div class="d-flex flex-column align-center" style="position: absolute; right: 32px; bottom: 96px">
             <MButton Icon Fab OnClick="OnLikeClicked">
@@ -46,9 +46,6 @@
     private IJSObjectReference? _jsVideo;
 
     [Parameter]
-    public int Test { get; set; }
-
-    [Parameter]
     public string Class { get; set; } = "";
 
     [Parameter]
@@ -60,29 +57,8 @@
     [Parameter]
     public bool AutoPlay { get; set; }
 
-    private string _videoUrl { get; set; } = "https://video.pearvideo.com/mp4/third/20211108/cont-1745429-11905134-102742-hd.mp4";
-
-    private bool IsPlaying { get; set; }
-
-    public async Task ShowAsync()
-    {
-        if (Show == true)
-        {
-            return;
-        }
-        Show = true;
-        await InvokeAsync(StateHasChanged);
-    }
-
-    public async Task HideAsync()
-    {
-        if (Show == false)
-        {
-            return;
-        }
-        Show = false;
-        await InvokeAsync(StateHasChanged);
-    }
+    [Parameter]
+    public VideoDto? Video { get; set; }
 
     public async Task PlayAsync()
     {
