--- a/Project1024.Wasm/Pages/Recommend.razor
+++ b/Project1024.Wasm/Pages/Recommend.razor
@@ -1,6 +1,8 @@
 @page "/"
 @page "/Recommend"
-@inject IJSRuntime JS
+@using Project1024.Shared.Models;
+@using Project1024.Shared.Services;
+@inject IVideoService VideoService
 
 <div class="d-flex" style="position:absolute; height: 100%; width: 100%">
     <SwiperContainer @ref="_swiper"
@@ -11,11 +13,13 @@
                      keyboard="true"
                      focusable-elements="button"
                      no-swiping-selector=".m-btn">
-        @for (int i = 0; i < 9; i++)
+        @for (int i = 0; i < _videos.Count; i++)
         {
-            var current = i;
-            <SwiperSlide class="pa-2" style="box-sizing: border-box">
-                <VideoPlayer @ref="_players[current]" Test="current" Show="current < 2" AutoPlay="current == 0" Style="width: 100%; height: 100%" />
+            int idx = i;
+            bool show = idx >= _index - 1 && idx <= _index + 1;
+            bool autoPlay = idx == _index;
+            <SwiperSlide @key="_videos[idx].Id" class="pa-2" style="box-sizing: border-box">
+                <VideoPlayer @ref="_players[idx]" Video="_videos[idx]" Show="show" AutoPlay="autoPlay" Style="width: 100%; height: 100%" />
             </SwiperSlide>
         }
     </SwiperContainer>
@@ -32,7 +36,18 @@
  @code {
     private int _index = 0;
     private SwiperContainer _swiper = null!;
-    private List<VideoPlayer> _players = new(Enumerable.Range(0, 9).Select<int, VideoPlayer>(i => null!));
+    private List<VideoPlayer> _players = null!;
+    private List<VideoDto> _videos = null!;
+
+    protected async override Task OnInitializedAsync()
+    {
+        _videos = await VideoService.GetVideosAsync(0, 5) ?? new();
+        _players = new(_videos?.Count ?? 0);
+        for (int i = 0; i < _videos?.Count; i++)
+        {
+            _players.Add(null!);
+        }
+    }
 
     private async Task OnIndexChanged(int index)
     {
@@ -40,26 +55,10 @@
         if (index > _index)
         {
             await _players[index - 1].PauseAsync();
-            if (index - 2 >= 0)
-            {
-                await _players[index - 2].HideAsync();
-            }
-            if (index < _players.Count - 1)
-            {
-                await _players[index + 1].ShowAsync();
-            }
         }
         else if (index < _index)
         {
             await _players[index + 1].PauseAsync();
-            if (index + 2 < _players.Count)
-            {
-                await _players[index + 2].HideAsync();
-            }
-            if (index > 0)
-            {
-                await _players[index - 1].ShowAsync();
-            }
         }
         _index = index;
     }
