--- a/Project1024.Wasm/Pages/Recommend.razor
+++ b/Project1024.Wasm/Pages/Recommend.razor
@@ -17,9 +17,9 @@
         {
             int idx = i;
             bool show = idx >= _index - 1 && idx <= _index + 1;
-            bool autoPlay = idx == _index;
+            bool play = idx == _index;
             <SwiperSlide @key="_videos[idx].Id" class="pa-2" style="box-sizing: border-box">
-                <VideoPlayer @ref="_players[idx]" Video="_videos[idx]" Show="show" AutoPlay="autoPlay" Style="width: 100%; height: 100%" />
+                <VideoPlayer @ref="_players[idx]" Video="_videos[idx]" Show="show" Play="play" AutoPlay="play" Style="width: 100%; height: 100%" />
             </SwiperSlide>
         }
     </SwiperContainer>
@@ -49,17 +49,8 @@
         }
     }
 
-    private async Task OnIndexChanged(int index)
+    private void OnIndexChanged(int index)
     {
-        await _players[index].PlayAsync();
-        if (index > _index)
-        {
-            await _players[index - 1].PauseAsync();
-        }
-        else if (index < _index)
-        {
-            await _players[index + 1].PauseAsync();
-        }
         _index = index;
     }
  }
