设置视频圆角

--- a/Project1024.Wasm/Components/VideoPlayer.razor
+++ b/Project1024.Wasm/Components/VideoPlayer.razor
@@ -2,7 +2,7 @@
 @inject IJSRuntime JS
 @implements IAsyncDisposable
 
-<div class="@Class" style="position: relative; border-radius: 12px; @Style">
+<div class="@Class" style="position: relative; border-radius: 10px; overflow: hidden; @Style">
     @if (Show)
     {
         <video @ref="_video"
