--- a/Project1024.Wasm/Shared/Navigation.razor
+++ b/Project1024.Wasm/Shared/Navigation.razor
@@ -1,4 +1,8 @@
-﻿<MNavigationDrawer App Floating Permanent ExpandOnHover MiniVariantWidth="72">
+﻿@using Project1024.Shared.Models;
+@using Project1024.Shared.Services;
+@inject IVideoCategoryService VideoCategoryService
+
+<MNavigationDrawer App Floating Permanent ExpandOnHover MiniVariantWidth="72">
      <MListItem>
          <MListItemIcon>
              <MIcon Size="40">mdi-video-vintage</MIcon>
@@ -16,14 +20,6 @@
      <MDivider></MDivider>
 
      <MList Nav Routable>
-        <MListItem Href="/Discover" ActiveClass="primary--text">
-            <MListItemIcon>
-                <MIcon>mdi-plus</MIcon>
-            </MListItemIcon>
-            <MListItemContent>
-                <MListItemTitle>发现</MListItemTitle>
-            </MListItemContent>
-        </MListItem>
         <MListItem Href="/" ActiveClass="primary--text">
             <MListItemIcon>
                 <MIcon>mdi-home</MIcon>
@@ -33,29 +29,25 @@
             </MListItemContent>
         </MListItem>
         <MDivider></MDivider>
-        <MListItem Href="/Category/Hot" ActiveClass="primary--text">
-            <MListItemIcon>
-                <MIcon>mdi-list-box</MIcon>
-            </MListItemIcon>
-            <MListItemContent>
-                <MListItemTitle>热点</MListItemTitle>
-            </MListItemContent>
-        </MListItem>
-        <MListItem Href="/Category/Game" ActiveClass="primary--text">
-            <MListItemIcon>
-                <MIcon>mdi-list-box</MIcon>
-            </MListItemIcon>
-            <MListItemContent>
-                <MListItemTitle>游戏</MListItemTitle>
-            </MListItemContent>
-        </MListItem>
-        <MListItem Href="/Category/Music" ActiveClass="primary--text">
-            <MListItemIcon>
-                <MIcon>mdi-list-box</MIcon>
-            </MListItemIcon>
-            <MListItemContent>
-                <MListItemTitle>音乐</MListItemTitle>
-            </MListItemContent>
-        </MListItem>
+        @foreach (var category in _categories)
+        {
+            <MListItem Href="@($"/Category/{category.CategoryId}")" ActiveClass="primary--text">
+                <MListItemIcon>
+                    <MIcon>mdi-list-box</MIcon>
+                </MListItemIcon>
+                <MListItemContent>
+                    <MListItemTitle>@category.CategoryName</MListItemTitle>
+                </MListItemContent>
+            </MListItem>
+        }
     </MList>
 </MNavigationDrawer>
+
+@code {
+    private List<VideoCategoryDto> _categories = null!;
+
+    protected override async Task OnInitializedAsync()
+    {
+        _categories = await VideoCategoryService.GetVideoCategoriesAsync() ?? new();
+    }
+}
