--- a/Project1024.Wasm/Pages/Recommend.razor
+++ b/Project1024.Wasm/Pages/Recommend.razor
@@ -9,6 +9,7 @@
                      IndexChanged="OnIndexChanged"
                      class="flex-grow-1"
                      direction="vertical"
+                     observe-slide-children="true"
                      mousewheel="true"
                      keyboard="true"
                      focusable-elements="button"
@@ -19,7 +20,7 @@
             bool show = idx >= _index - 1 && idx <= _index + 1;
             bool play = idx == _index;
             <SwiperSlide @key="_videos[idx].Id" class="pa-2" style="box-sizing: border-box">
-                <VideoPlayer @ref="_players[idx]" Video="_videos[idx]" Show="show" Play="play" AutoPlay="play" Style="width: 100%; height: 100%" />
+                <VideoPlayer Video="_videos[idx]" Show="show" Play="play" AutoPlay="play" Style="width: 100%; height: 100%" />
             </SwiperSlide>
         }
     </SwiperContainer>
@@ -27,30 +28,35 @@
         <MButton Fab Class="mb-1" Disabled="_index == 0" OnClick="() => _swiper.SlidePrevAsync()">
              <MIcon>mdi-chevron-up</MIcon>
          </MButton>
-         <MButton Fab Class="mt-1" Disabled="_index == _players.Count - 1" OnClick="() => _swiper.SlideNextAsync()">
+         <MButton Fab Class="mt-1" Disabled="_index == _videos.Count - 1" OnClick="() => _swiper.SlideNextAsync()">
              <MIcon>mdi-chevron-down</MIcon>
          </MButton>
      </div>
  </div>
 
  @code {
+    private const int PageSize = 5;
+
     private int _index = 0;
+    private int _page = 0;
     private SwiperContainer _swiper = null!;
-    private List<VideoPlayer> _players = null!;
     private List<VideoDto> _videos = null!;
 
     protected async override Task OnInitializedAsync()
     {
-        _videos = await VideoService.GetVideosAsync(0, 5) ?? new();
-        _players = new(_videos?.Count ?? 0);
-        for (int i = 0; i < _videos?.Count; i++)
-        {
-            _players.Add(null!);
-        }
+        _videos = await VideoService.GetVideosAsync(_page, PageSize) ?? new();
     }
 
-    private void OnIndexChanged(int index)
+    private async Task OnIndexChanged(int index)
     {
         _index = index;
+        if (index == _videos.Count - 2)
+        {
+            var list = await VideoService.GetVideosAsync(++_page, PageSize);
+            if (list is not null)
+            {
+                _videos.AddRange(list);
+            }
+        }
     }
  }
