实现分类页无限加载

--- a/Project1024.Wasm/Pages/Category.razor
+++ b/Project1024.Wasm/Pages/Category.razor
@@ -3,7 +3,7 @@
 @using Project1024.Shared.Services;
 @inject IVideoCategoryService VideoCategoryService
 
-<MContainer Fluid Class="pa-8">
+<MContainer @ref="_container" Fluid Class="pa-8">
      <h1 class="text-h4 mb-4">@_category?.CategoryName</h1>
      <MRow>
          @foreach (var video in _videos)
@@ -30,13 +30,18 @@
             <VideoPlayer @ref="_player" Play="_showVideo" Video="_video" Style="width: 100%; height: 100%" />
         </ChildContent>
     </PModal>
+    <MInfiniteScroll Class="mb-n8" OnLoad="@OnLoad" Parent="_container.Ref"></MInfiniteScroll>
 </MContainer>
 
 @code {
+    private const int PageSize = 8;
+
+    private int _page = 0;
     private bool _showVideo = false;
+    private MContainer _container = null!;
     private VideoPlayer _player = null!;
     private VideoCategoryDto? _category;
-    private List<VideoDto> _videos = null!;
+    private List<VideoDto> _videos = new();
     private VideoDto? _video;
 
     [Parameter]
@@ -46,6 +51,21 @@
     {
         var categories = await VideoCategoryService.GetVideoCategoriesAsync();
         _category = categories?.Single(c => c.CategoryId == Id);
-        _videos = await VideoCategoryService.GetVideosByCategoryAsync(Id, 0, 5) ?? new();
+    }
+
+    private async Task OnLoad(InfiniteScrollLoadEventArgs args)
+    {
+        var list = await VideoCategoryService.GetVideosByCategoryAsync(Id, ++_page, PageSize);
+        if (list is null)
+        {
+            args.Status = InfiniteScrollLoadStatus.Error;
+            return;
+        }
+        else if (list.Count == 0)
+        {
+            args.Status = InfiniteScrollLoadStatus.Empty;
+            return;
+        }
+        _videos.AddRange(list);
     }
 }
